--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 body {
+  display: flexbox;
+  align-items: center;
+  justify-items: center;
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +14,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.square{
+  padding: 50px;
+}
+
+.board-row{
+  margin: 0;
+  padding: 0
 }
