--- a/src/index.css
+++ b/src/index.css
@@ -9,53 +9,6 @@
   --title-color: #00ffff; /* Electric Blue */
 }
 
-
-/* body {
-  height: 100%;
-  width: 100%;
-  display: flexbox;
-  align-content: center;
-  justify-items: center;
-  background-color: #f2f2f2;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.title{
-  text-align: center;
-  font-weight: 900;
-  font-family: Arial, Helvetica, sans-serif;
-
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-.square{
-  width: 100px;
-  height: 100px;
-  box-sizing: border-box;
-  border: 1px solid #333333;
-  font-size: 40px;
-  font-weight: 600;
-  background-color: #ffffff;
-}
-
-
-.board-row{
-  display: flex;
-  border: 1px solid #333333;
-}
-
-.status{
-  text-align: center;
-} */
-
 body {
   background-color: var(--background-color);
   color: var(--text-color);
@@ -65,13 +18,15 @@ body {
 .title {
   color: var(--title-color);
   text-align: center;
-  font-size: 2em;
+  font-size: 2.5em;
 }
 
 .status {
-  color: var(--text-color);
+  font-size: 1.5em;
   text-align: center;
   margin: 10px 0;
+  padding: 5px 0;
+  color: var(--board-border-color);
 }
 
 .square {
@@ -103,16 +58,15 @@ body {
 }
 
 .xo.x {
-  color: var(--x-color); /* Neon Green */
+  color: var(--x-color); 
 }
 
 .xo.o {
-  color: var(--o-color); /* Neon Pink */
+  color: var(--o-color); 
 }
 
-/* Add some hover effect for fun */
+
 .xo:hover {
   transform: scale(1.1);
   transition: transform 0.2s;
 }
-
